--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@types/express": "^5.0.3",
     "@types/node": "^24.2.1",
     "nodemon": "^3.1.10",
+    "prisma": "^6.14.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   },
