--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,9 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "@apollo/server": "^5.0.0",
     "@prisma/client": "^6.14.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "graphql": "^16.11.0"
   }
 }
