--- a/backend/package.json
+++ b/backend/package.json
@@ -1,25 +1,30 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec ts-node index.ts",
+    "start": "nodemon --exec npx tsx index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.2.1",
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
     "nodemon": "^3.1.10",
     "prisma": "^6.14.0",
-    "ts-node": "^10.9.2",
+    "tsx": "^4.20.4",
     "typescript": "^5.9.2"
   },
   "dependencies": {
     "@apollo/server": "^5.0.0",
+    "@as-integrations/express5": "^1.1.2",
     "@prisma/client": "^6.14.0",
     "express": "^5.1.0",
     "graphql": "^16.11.0",
