--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,8 @@
     "nodemon": "^3.1.10",
     "prisma": "^6.14.0",
     "tsx": "^4.20.4",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "ulid": "^3.0.1"
   },
   "dependencies": {
     "@apollo/server": "^5.0.0",
